@@ -37,9 +37,9 @@ def createBCP():
 
 	outBCP = open('%s.bcp' % (table), 'w')
 
-	qresults = db.sql('select _Term_key from VOC_Term_RepQualifier_View where term = "Not Specified"', 'auto')
-	for r in qresults:
-	   qualityKey = r['_Term_key']
+#	qresults = db.sql('select _Term_key from VOC_Term_RepQualifier_View where term = "Not Specified"', 'auto')
+#	for r in qresults:
+#	   qualityKey = r['_Term_key']
 
 	cmds = []
 
@@ -48,69 +48,90 @@ def createBCP():
 	cmds.append('select _Marker_key into #mouse from MRK_Marker where _Organism_key = 1 and _Marker_Status_key in (1,3)')
 	cmds.append('create nonclustered index idx_key on #mouse (_Marker_key)')
 
+	# select all non-MGI accession ids for mouse markers 
+
+	cmds.append('select m._Marker_key, a._LogicalDB_key, a.accID, r._Refs_key, ' + \
+		'mdate = convert(char(10), a.modification_date, 101) ' + \
+		'into #mouseAccs ' + \
+		'from #mouse m, ACC_Accession a, ACC_AccessionReference r ' + \
+		'where m._Marker_key = a._Object_key ' + \
+		'and a._MGIType_key = 2 ' + \
+		'and a._LogicalDB_key != 1 ' + \
+		'and a._Accession_key = r._Accession_key')
+
+	cmds.append('create nonclustered index idx1 on #mouseAccs (_Marker_key)')
+	cmds.append('create nonclustered index idx2 on #mouseAccs (_LogicalDB_key)')
+	cmds.append('create nonclustered index idx3 on #mouseAccs (accID)')
+	cmds.append('create nonclustered index idx4 on #mouseAccs (mdate)')
+
+	# select all mouse annotations
+
+	cmds.append('select sequenceKey = s._Object_key, markerKey = m._Marker_key, refsKey = m._Refs_key, m.mdate ' + \
+		'into #allannot ' + \
+		'from #mouseAccs m, ACC_Accession s ' + \
+		'where m.accID = s.accID ' + \
+		'and m._LogicalDB_key = s._LogicalDB_key ' + \
+		'and s._MGIType_key = 19 ')
+
+	cmds.append('create nonclustered index idx1 on #allannot (sequenceKey)')
+
 	# select annotations to dummy sequences
 
-	cmds.append('select m.accID, sequenceKey = s._Object_key, ' + \
-		'markerKey = m._Object_key, refsKey = ar._Refs_key, ' + \
-		'mdate = convert(char(10), m.modification_date, 101) ' + \
-		'into #dummy ' + \
-		'from #mouse mm, ACC_Accession m, ACC_Accession s, ACC_AccessionReference ar, ' + \
-		'SEQ_Sequence ss, VOC_Term t ' + \
-		'where mm._Marker_key = m._Object_key ' + \
-		'and m._MGIType_key = 2 ' + \
-		'and m.accID = s.accID ' + \
-		'and m._LogicalDB_key = s._LogicalDB_key ' + \
-		'and s._MGIType_key = 19 ' + \
-		'and m._Accession_key = ar._Accession_key ' + \
-		'and s._Object_key = ss._Sequence_key ' + \
-		'and ss._SequenceStatus_key = t._Term_key ' + \
-		'and t.term = "Not Loaded"')
+	cmds.append('select a.sequenceKey, a.markerKey, a.refsKey, a.mdate ' + \
+		'into #dummyannot ' + \
+		'from #allannot a, SEQ_Sequence ss ' + \
+		'where a.sequenceKey = ss._Sequence_key ' + \
+		'and ss._SequenceStatus_key = 316345')
 
-	cmds.append('create nonclustered index idx_acc on #dummy (accID)')
-	cmds.append('create nonclustered index idx_seq on #dummy (sequenceKey)')
-	cmds.append('create nonclustered index idx_mrk on #dummy (markerKey)')
-	cmds.append('create nonclustered index idx_ref on #dummy (refsKey)')
-	cmds.append('create nonclustered index idx_mdt on #dummy (mdate)')
+	cmds.append('create nonclustered index idx1 on #dummyannot (sequenceKey)')
+	cmds.append('create nonclustered index idx2 on #dummyannot (markerKey)')
+	cmds.append('create nonclustered index idx3 on #dummyannot (refsKey)')
+	cmds.append('create nonclustered index idx4 on #dummyannot (mdate)')
 
-	cmds.append('select m.accID, sequenceKey = s._Object_key, ' + \
-		'markerKey = m._Object_key, refsKey = ar._Refs_key, ' + \
-		'mdate = convert(char(10), m.modification_date, 101) ' + \
-		'into #sequences ' + \
-		'from #mouse mm, ACC_Accession m, ACC_Accession s, ACC_AccessionReference ar, ' + \
-		'SEQ_Sequence ss, VOC_Term t ' + \
-		'where mm._Marker_key = m._Object_key ' + \
-		'and m._MGIType_key = 2 ' + \
-		'and m.accID = s.accID ' + \
-		'and m._LogicalDB_key = s._LogicalDB_key ' + \
-		'and s._MGIType_key = 19 ' + \
-		'and m._Accession_key = ar._Accession_key ' + \
-		'and s._Object_key = ss._Sequence_key ' + \
-		'and ss._SequenceStatus_key = t._Term_key ' + \
-		'and t.term != "Not Loaded"')
+	# select annotations to nondummy sequences
 
-	cmds.append('create nonclustered index idx_acc on #sequences (accID)')
-	cmds.append('create nonclustered index idx_seq on #sequences (sequenceKey)')
-	cmds.append('create nonclustered index idx_mrk on #sequences (markerKey)')
-	cmds.append('create nonclustered index idx_ref on #sequences (refsKey)')
-	cmds.append('create nonclustered index idx_mdt on #sequences (mdate)')
+	cmds.append('select a.sequenceKey, a.markerKey, a.refsKey, a.mdate ' + \
+		'into #nondummyannot ' + \
+		'from #allannot a, SEQ_Sequence ss ' + \
+		'where a.sequenceKey = ss._Sequence_key ' + \
+		'and ss._SequenceStatus_key != 316345')
+
+	cmds.append('create nonclustered index idx1 on #nondummyannot (sequenceKey)')
+	cmds.append('create nonclustered index idx2 on #nondummyannot (markerKey)')
+	cmds.append('create nonclustered index idx3 on #nondummyannot (refsKey)')
+	cmds.append('create nonclustered index idx4 on #nondummyannot (mdate)')
 
 	#  don't cache marker/dummy annotations if the real thing exists
 
-	cmds.append('select distinct sequenceKey, markerKey, refsKey, mdate = max(mdate) from #sequences ' + \
-		'group by sequenceKey, markerKey, refsKey ' + \
-		'union ' + \
-		'select distinct sequenceKey, markerKey, refsKey, mdate = max(mdate) from #dummy d ' + \
-		'where not exists (select 1 from #sequences s where d.accID = s.accID) ' + \
-		'group by sequenceKey, markerKey, refsKey')
+	cmds.append('delete #dummyannot from #dummyannot d, #nondummyannot n ' + \
+		'where d.sequenceKey = n.sequenceKey and d.markerKey = n.markerKey')
+
+	# select records, grouping by sequence, marker and reference
+
+	cmds.append('select sequenceKey, markerKey, refsKey, mdate = max(mdate) ' + 
+		'from #dummyannot group by sequenceKey, markerKey, refsKey')
+
+	cmds.append('select sequenceKey, markerKey, refsKey, mdate = max(mdate) ' + 
+		'from #nondummyannot group by sequenceKey, markerKey, refsKey')
 
 	results = db.sql(cmds, 'auto')
 
 	for r in results[-1]:
 
+#		       	mgi_utils.prvalue(r['qualityKey']) + DL + \
 		outBCP.write(mgi_utils.prvalue(r['sequenceKey']) + DL + \
 		       	mgi_utils.prvalue(r['markerKey']) + DL + \
 		       	mgi_utils.prvalue(r['refsKey']) + DL + \
-		       	mgi_utils.prvalue(qualityKey) + DL + \
+			r['mdate'] + DL + \
+			str(userKey) + DL + str(userKey) + DL + \
+			loaddate + DL + loaddate + NL)
+
+	for r in results[-2]:
+
+#		       	mgi_utils.prvalue(r['qualityKey']) + DL + \
+		outBCP.write(mgi_utils.prvalue(r['sequenceKey']) + DL + \
+		       	mgi_utils.prvalue(r['markerKey']) + DL + \
+		       	mgi_utils.prvalue(r['refsKey']) + DL + \
 			r['mdate'] + DL + \
 			str(userKey) + DL + str(userKey) + DL + \
 			loaddate + DL + loaddate + NL)
