@@ -5,6 +5,13 @@ RELEASE: A
 CHANGES: 
 1) Assembly/qualifier
 
+TAG: seqcacheload-1-0-12
+DATE: 08/24/2004
+STAFF: lec
+RELEASE: A
+CHANGES: 
+1) improve performance of seqmarker.py
+
 TAG: seqcacheload-1-0-11
 DATE: 06/04/2004
 STAFF: lec
